# Ambilight

./: .gitignore  CMakeLists.txt  install_systemd_units.sh
cpp/: CMakeLists.txt
cpp/include/: ambient_processor.h  ipc_server.h  led_driver.h  rgb.h
cpp/src/: ipc_server.cpp  led_driver.cpp  main.cpp
python/: start_fastapi.sh
scripts/: dependencies.sh
systemd/: ambilight-api.service  ambilight-led.service
